add some styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub PAT Tester</title>
+    <style>
+        .PAT-field {
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            max-width: 400px;
+        }
+
+        .PAT-field label {
+            font-size: 1.5em;
+            margin-bottom: 0.5em;
+        }
+
+        .PAT-field input {
+            font-size: 1.5em;
+            padding: 0.5em;
+            margin-bottom: 1em;
+        }
+
+        .PAT-field .note {
+            font-size: 1em;
+            margin-bottom: 1em;
+        }
+
+        .PAT-field button {
+            font-size: 1.5em;
+            padding: 0.5em;
+            margin-bottom: 1em;
+        }
+
+        .PAT-field #scopes {
+            font-size: 1.5em;
+            margin-bottom: 1em;
+        }
+    </style>
 </head>
 <body>
 <div class="PAT-field text-field">
