--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             font-size: 1.5em;
             margin-bottom: 1em;
         }
+
+        .PAT-field code {
+            filter: blur(5px);
+        }
+
+        .PAT-field code:hover {
+            filter: none;
+        }
+
     </style>
 </head>
 <body>
