make input password type to hide chars

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>Register a PAT here: <a href="https://github.com/settings/tokens">https://github.com/settings/tokens</a>
         </p>
     </div>
-    <input class="" id="pat" name="PAT" placeholder="PAT" type="text" value="">
+    <input class="" id="pat" name="PAT" placeholder="PAT" type="password" value="">
     <button id="test-scopes" class="button">Test scopes</button>
     <div id="scopes"></div>
 </div>
