--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 <div class="PAT-field text-field">
-    <label for="pat">GitHub personal access token</label>
+    <label for="pat">GitHub personal access token tester</label>
     <div class="note">
         <p>Register a PAT here: <a href="https://github.com/settings/tokens">https://github.com/settings/tokens</a>
         </p>
