add link to source code

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <button id="test-scopes" class="button">Test scopes</button>
     <div id="scopes"></div>
 </div>
+<div class="footnote">
+    <p>Source code: <a href="https://github.com/billythekid/github-pat-tester">billythekid/github-pat-tester</a></p>
+</div>
 <script>
     document.getElementById('test-scopes').addEventListener('click', () => {
         fetch('https://api.github.com', {
