--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             filter: none;
         }
 
+        .footnote {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+        }
+
     </style>
 </head>
 <body>
