--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             position: fixed;
             bottom: 0;
             left: 0;
+            padding-left: 1em;
         }
 
     </style>
